--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
     <title>Spotify</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<header></header>
+<header>
+
+    <h1><img class="izquierda" src="./img/logo spotify.png" alt="logo spotify"> Spotify <img class="derecha" src="./img/menu-icon.png" alt="imagen de menu"></h1>
+
+</header>
 <body>
+    <section>
+    <h2>Prueba Premium gratis 3 meses</h2>
+    <ph3>Escucha millones de canciones sin anuncios, a la carta y sin conexión.</p>
+    <nav><button> VER PLANES </button></nav>
+
+    </section>
     
 </body>
-<footer></footer>
+<footer>
+
+</footer>
 </html>
