add changes htmlandcss

--- a/index.html
+++ b/index.html
@@ -6,29 +6,21 @@
     <title>Spotify</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<header>
-<<<<<<< HEAD
+<header class="header">
 
-    <h1><img class="izquierda" src="./img/logo spotify.png" alt="logo spotify"> Spotify <img class="derecha" src="./img/menu-icon.png" alt="imagen de menu"></h1>
+    <h1 class="h1"><img class="izquierda" src="./image/logo.png" alt="logo spotify"><img class="derecha" src="./image/menu-icon.png" alt="imagen de menu"></h1>
 
-=======
-    <h1><img class="izquierda" src="./img/logo spotify.png" alt="logo spotify">Spotify<img class="derecha" src="./img/menu-icon.png" alt="imagen de menu"></h1>
->>>>>>> 49812ebbb492c7f7800a3cc9878af43a8941de3b
 </header>
 <body>
     <section>
     <h2>Prueba Premium gratis 3 meses</h2>
-    <ph3>Escucha millones de canciones sin anuncios, a la carta y sin conexión.</p>
-    <nav><button> VER PLANES </button></nav>
+    <p>Escucha millones de canciones sin anuncios, a la carta y sin conexión.</p>
+    <nav><button class="button"> VER PLANES </button></nav>
 
     </section>
     
 </body>
-<<<<<<< HEAD
 <footer>
 
 </footer>
 </html>
-=======
-<footer>
->>>>>>> 49812ebbb492c7f7800a3cc9878af43a8941de3b
