--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="description" content=" Receta de papilla de frutas perfecta para un bebe de 6 meses. "/>
     <meta name="robots" content="index, follow"/>
-     <title>RECETAS</title>
+     <title>RECETA</title>
      <link rel="stylesheet" href="./style.css">
   </head>
 
