--- a/html/index.html
+++ b/html/index.html
@@ -15,10 +15,8 @@
     <section>
     <h2>Prueba Premium gratis 3 meses</h2>
     <p>Escucha millones de canciones sin anuncios, a la carta y sin conexión.</p>
-    <nav><button class="button"> VER PLANES </button></nav>
-
+    <nav><a href="#" class="button"> VER PLANES </nav>
     </section>
-    
 </body>
 <footer>
 
